data-chart/k8-deploy.yaml
kind: Service
apiVersion: v1
metadata:
  name: data-chart
  labels:
    app: data-chart 
spec:
  selector:
    app: data-chart
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

  
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-chart
spec:
  selector:
      matchLabels:
        app: data-chart
  replicas: 1
  template:
    metadata:
      labels:
        app: data-chart
    spec:
      
      containers:
        - name: data-chart
          image: data-chart:mst2
          ports:
            - containerPort: 80
          imagePullPolicy: Never
